RSA finished and optimized AES package